<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="welcome">Welcome to Fitness Tracker!</string>
    <string name="workout_log">Workout Log</string>
    <string name="workout_history">Workout History</string>
    <string name="settings">Settings</string>
    <string name="zero">0</string>
    <string name="exercise1">Exercise 1:</string>
    <string name="exercise2">Exercise 2:</string>
    <string name="exercise3">Exercise 3:</string>
    <string name="exercise4">Exercise 4:</string>
    <string name="exercise5">Exercise 5:</string>
    <string name="exercise6">Exercise 6:</string>
    <string name="set1">Set 1:</string>
    <string name="set2">Set 2:</string>
    <string name="set3">Set 3:</string>
    <string name="set4">Set 4:</string>
    <string name="set5">Set 5:</string>
    <string name="set6">Set 6:</string>
    <string name="set7">Set 7:</string>
    <string name="set8">Set 8:</string>
    <string name="weight">Weight:</string>
    <string name="reps">Reps:</string>
    <string name="add">Add</string>
    <string name="enter">Enter</string>
    <string name="start_workout">Start Workout</string>
    <string name="select_sets">Select Sets</string>
    <string name="sets">Sets: </string>
    <string name="select">Select...</string>
    <string name="title_activity_main_workout">My Workout</string>
    <string name="action_settings">Settings</string>
    <string name="next_set">Next Set</string>
</resources>
