<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rlkang.richard.fitnesstracker.SelectionPanel">

    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_above="@+id/exercise1"
        android:text="@string/add"
        android:onClick="Add"/>

    <TextView
        android:id="@+id/display_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/exercise1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_part"
        android:layout_marginTop="30dp"
        android:text="@string/exercise1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exercise2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise1"
        android:layout_marginTop="20dp"
        android:text="@string/exercise2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exercise3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise2"
        android:layout_marginTop="20dp"
        android:text="@string/exercise3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exercise4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise3"
        android:layout_marginTop="20dp"
        android:text="@string/exercise4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exercise5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise4"
        android:layout_marginTop="20dp"
        android:text="@string/exercise5"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/exercise6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise5"
        android:layout_marginTop="20dp"
        android:text="@string/exercise6"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/exercise7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise6"
        android:layout_marginTop="20dp"
        android:text="@string/exercise7"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/exercise8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise7"
        android:layout_marginTop="20dp"
        android:text="@string/exercise8"
        android:textSize="20sp"
        android:visibility="invisible"/>

    <Button
        android:layout_width="360dp"
        android:layout_height="20dp"
        android:layout_below="@+id/exercise8"
        android:layout_marginTop="20dp"
        android:text="@string/start_workout"
        android:visibility="visible"
        android:onClick="Start_Workout"/>


</RelativeLayout>
