<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rlkang.richard.fitnesstracker.MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/welcome"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/workout_log"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@android:color/holo_blue_light"
        android:text="@string/workout_log"
        android:onClick="Workout_Log"/>

    <Button
        android:id="@+id/settings"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_below="@+id/workout_log"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/settings" />


</RelativeLayout>
