<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rlkang.richard.fitnesstracker.MainWorkout">

    <TextView
        android:id="@+id/main_workout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_workout_title"
        android:layout_marginTop="10dp"
        android:text=""
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/lin1C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set1"
            android:textSize="12sp" />

        <TextView
        android:id="@+id/wtext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:layout_marginStart="20dp"
        android:textSize="12sp" />

        <EditText
            android:id="@+id/wselect1"
            android:labelFor="@+id/wselect1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />

        <TextView
            android:id="@+id/rtext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:layout_marginStart="10dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/rselect1"
            android:labelFor="@+id/rselect1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin2C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin1C"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wtext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginStart="20dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/wselect2"
            android:labelFor="@+id/wselect2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />

        <TextView
            android:id="@+id/rtext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:layout_marginStart="10dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/rselect2"
            android:labelFor="@+id/rselect2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin3C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin2C"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set3"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wtext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginStart="20dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/wselect3"
            android:labelFor="@+id/wselect3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />

        <TextView
            android:id="@+id/rtext3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:layout_marginStart="10dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/rselect3"
            android:labelFor="@+id/rselect3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin4C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin3C"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set4"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wtext4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginStart="20dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/wselect4"
            android:labelFor="@+id/wselect4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />

        <TextView
            android:id="@+id/rtext4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:layout_marginStart="10dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/rselect4"
            android:labelFor="@+id/rselect4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin5C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin4C"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set5"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wtext5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginStart="20dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/wselect5"
            android:labelFor="@+id/wselect5"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />

        <TextView
            android:id="@+id/rtext5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:layout_marginStart="10dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/rselect5"
            android:labelFor="@+id/rselect5"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin6C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin5C"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set6"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wtext6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginStart="20dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/wselect6"
            android:labelFor="@+id/wselect6"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />

        <TextView
            android:id="@+id/rtext6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:layout_marginStart="10dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/rselect6"
            android:labelFor="@+id/rselect6"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin7C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin6C"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set7"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wtext7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginStart="20dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/wselect7"
            android:labelFor="@+id/wselect7"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />

        <TextView
            android:id="@+id/rtext7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:layout_marginStart="10dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/rselect7"
            android:labelFor="@+id/rselect7"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lin8C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin7C"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/set8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set8"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wtext8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:layout_marginStart="20dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/wselect8"
            android:labelFor="@+id/wselect8"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />

        <TextView
            android:id="@+id/rtext8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reps"
            android:layout_marginStart="10dp"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/rselect8"
            android:labelFor="@+id/rselect8"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin8C"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/enter"
        android:onClick="Enter"/>


</RelativeLayout>
