<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.rlkang.richard.fitnesstracker.SelectSets">

    <TextView
        android:id="@+id/main_workout_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/exercise1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_workout_title"
        android:text=""
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/lin1B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise1"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/set1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/stext1"
            android:labelFor="@+id/stext1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false"
            android:onClick="Set"/>
    </LinearLayout>

    <TextView
        android:id="@+id/exercise2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin1B"
        android:text=""
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/lin2B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise2"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/set2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/stext2"
            android:labelFor="@+id/stext2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false"
            android:onClick="Set"/>
    </LinearLayout>


    <TextView
        android:id="@+id/exercise3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin2B"
        android:text=""
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/lin3B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise3"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/set3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/stext3"
            android:labelFor="@+id/stext3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false"
            android:onClick="Set"/>
    </LinearLayout>


    <TextView
        android:id="@+id/exercise4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin3B"
        android:text=""
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/lin4B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise4"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/set4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/stext4"
            android:labelFor="@+id/stext4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false"
            android:onClick="Set"/>
    </LinearLayout>


    <TextView
        android:id="@+id/exercise5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin4B"
        android:text=""
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/lin5B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise5"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/set5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/stext5"
            android:labelFor="@+id/stext5"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false"
            android:onClick="Set"/>
    </LinearLayout>


    <TextView
        android:id="@+id/exercise6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin5B"
        android:text=""
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/lin6B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exercise6"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/set6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sets"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/stext6"
            android:labelFor="@+id/stext6"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:textSize="12sp"
            android:layout_marginStart="10dp"
            android:focusable="false"
            android:onClick="Set"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lin6B"
        android:layout_centerHorizontal="true"
        android:text="@string/start_workout"
        android:onClick="Start_Workout"/>

</RelativeLayout>
